<resources>
    <string name="app_name">Password Authentication</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_create_account">Create account</string>
    <string name="button_sign_out">Sign out</string>
</resources>
